Fixed some alignment issues with the channel buttons

--- a/client/index.css
+++ b/client/index.css
@@ -43,6 +43,7 @@
     display: grid;
     grid-template-columns: auto minmax(25px, max-content);
     grid-column-gap: 15px;
+    align-items: center;
     background-color: #18181F;
     font-weight: bold;
     margin-bottom: 10px;
@@ -65,9 +66,12 @@
 }
 
 #server li > div .pill {
-    font-size: 0.8rem;
+    display: grid;
+    justify-content: center;
     background-color: #0031FF;
-    padding: 3px 5px;
+    font-size: 0.8rem;
+    padding: 0px 5px;
+    margin: 3px 0px;
 }
 
 #server li > .section {
